--- a/users/templates/existingstud.html
+++ b/users/templates/existingstud.html
@@ -16,11 +16,11 @@
         <tbody>
             <tr>
                 <td>{{forloop.counter}}</td>
-                <td>{{ k.s_name }}</td>
-                <td>{{ k.s_class }}</td>
-                <td>{{ k.s_addr }}</td>
-                <td>{{ k.s_school }}</td>
-                <td>{{ k.s_email }}</td>
+                <td>{{ k.Name }}</td>
+                <td>{{ k.Classroom }}</td>
+                <td>{{ k.Address }}</td>
+                <td>{{ k.School }}</td>
+                <td>{{ k.Email }}</td>
                 <td>
                     <form action="{% url 'deletedata' k.id %}" method="post" class="d-inline"> {% csrf_token %}
                         <input type="submit" class="btn btn-danger" value="Delete">
