--- a/users/templates/search.html
+++ b/users/templates/search.html
@@ -5,7 +5,7 @@
     <center><h1>{{title}}</h1>
     <form method="post">
         {% csrf_token %}
-        {{form}}
+        {{form.as_p}}
         <button type="submit">Search Student</button>
     </form>
 </html>
