--- a/users/templates/existingstud.html
+++ b/users/templates/existingstud.html
@@ -22,6 +22,7 @@
                 <td>{{ k.School }}</td>
                 <td>{{ k.Email }}</td>
                 <td>
+                    <a href="{% url 'updatedata' k.id %}" class="btn btn-warning btn-sm">Edit</a>
                     <form action="{% url 'deletedata' k.id %}" method="post" class="d-inline"> {% csrf_token %}
                         <input type="submit" class="btn btn-danger" value="Delete">
                     </form>
