--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -37,6 +37,9 @@
                 <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                 </li>
                 <li class="nav-item">
+                <a class="nav-link" href="{% url 'password_change' %}">Change password</a>
+                </li>
+                <li class="nav-item">
             {% else %}
                 <a class="nav-link " href="{% url 'login' %}" >Login</a>
             {% endif %}
